--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "aviator",
+  "name": "Experimental_Web",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/app.js",
   "license": "MIT",
   "scripts": {
-    "development": "webpack-dev-server --open",
+    "development": "npm run clean && webpack --watch",
+    "start": "NODE_ENV=development node app.js",
     "production": "npm run clean && npm run copy && NODE_ENV=production webpack -p",
     "copy": "copyfiles -u 1 './src/**/*.*' ./dist",
-    "clean": "rimraf dist",
-    "serve": "mamp ./dist"
+    "clean": "rimraf ./server",
+    "serve": "mamp ./dist",
+    "generate-ssl-certs": "./scripts/generate-ssl-certs.sh"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
@@ -17,5 +19,9 @@
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "copy-webpack-plugin": "^4.2.3",
+    "hapi": "^16.6.2",
+    "inert": "^4.2.1"
+  }
 }
