--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "joi": "^13.0.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.6",
-    "nodemon": "^1.12.5"
+    "nodemon": "^1.12.5",
+    "shortid": "^2.2.8"
   }
 }
