--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.13.6",
     "nodemon": "^1.12.5",
+    "recorderjs": "^1.0.1",
     "shortid": "^2.2.8"
   }
 }
