--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "./server/app.js",
   "license": "MIT",
   "scripts": {
-    "development": "npm run clean && npm run start & webpack --watch",
-    "start": "NODE_ENV=development nodemon ./server/app.js",
+    "development": "npm run clean && npm run server & webpack --watch",
+    "server": "NODE_ENV=development nodemon ./server/app.js",
+    "start": "forever .",
+    "clean": "rimraf ./server/public",
     "generate-ssl-certs": "./scripts/generate-ssl-certs.sh"
   },
   "devDependencies": {
