--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "boom": "^7.1.1",
+    "buffer-to-arraybuffer": "^0.0.5",
     "copy-webpack-plugin": "^4.2.3",
     "dotenv": "^4.0.0",
     "forever": "^0.15.3",
