--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
+    "array-to-audiobuffer": "^1.0.0",
     "boom": "^7.1.1",
     "buffer-to-arraybuffer": "^0.0.5",
     "copy-webpack-plugin": "^4.2.3",
