--- a/package.json
+++ b/package.json
@@ -12,31 +12,34 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
-    "html-webpack-plugin": "^2.30.1",
     "rimraf": "^2.6.2",
-    "webpack": "^3.6.0",
+    "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
-    "array-to-audiobuffer": "^1.0.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "boom": "^7.1.1",
-    "buffer-to-arraybuffer": "^0.0.5",
     "copy-webpack-plugin": "^4.2.3",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "forever": "^0.15.3",
     "hapi": "^16.6.2",
-    "hapi-devine-api-config": "^2.0.1",
-    "hapi-devine-autoload": "^2.0.1",
-    "hapi-devine-mongodb": "^1.7.1",
-    "hapi-devine-parse-query": "^1.0.6",
-    "hapi-devine-routes": "^1.1.1",
+    "html-loader": "^0.5.1",
     "inert": "^4.2.1",
     "isomorphic-fetch": "^2.2.1",
     "joi": "^13.0.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.6",
     "nodemon": "^1.12.5",
-    "recorderjs": "^1.0.1",
-    "shortid": "^2.2.8"
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.9",
+    "postcss-reporter": "^5.0.0",
+    "shortid": "^2.2.8",
+    "style-loader": "^0.19.1"
   }
 }
